--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,15 +4,15 @@
 # ╚══════════════════════════════════════════════════════════════════╝
 
 # import = [
-  # Uncomment if you have additional theme files
-  # "~/.config/alacritty/themes/custom.toml"
+# Uncomment if you have additional theme files
+# "~/.config/alacritty/themes/custom.toml"
 # ]
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  ENVIRONMENT                                                      │
 # └──────────────────────────────────────────────────────────────────┘
 [env]
-TERM = "alacritty"
+TERM = "xterm-256color"
 WINIT_X11_SCALE_FACTOR = "1.0"
 
 # ┌──────────────────────────────────────────────────────────────────┐
@@ -32,34 +32,34 @@ dynamic_padding = true
 decorations = "Transparent" # macOS only - full transparency
 
 # Transparency and blur (the fancy part!)
-opacity = 0.96  # Lower = more transparent
-blur = true     # macOS/KDE only - enables background blur
+opacity = 0.96 # Lower = more transparent
+blur = true    # macOS/KDE only - enables background blur
 
 # Window behavior
-resize_increments = false    # Smooth pixel-perfect resizing
+resize_increments = false # Smooth pixel-perfect resizing
 
 # Window class (Linux/BSD only)
 class = { instance = "Alacritty", general = "Alacritty" }
 
 # Decorations theme variant
-decorations_theme_variant = "Dark"  # Dark window chrome
+decorations_theme_variant = "Dark" # Dark window chrome
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  SCROLLING                                                        │
 # └──────────────────────────────────────────────────────────────────┘
 [scrolling]
-history = 100000  # Massive scrollback buffer
-multiplier = 3    # Scroll 3 lines at a time
+history = 100000 # Massive scrollback buffer
+multiplier = 3   # Scroll 3 lines at a time
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  FANCY FONT CONFIGURATION                                         │
 # └──────────────────────────────────────────────────────────────────┘
 [font]
 # Use a fancy programming font with ligatures
-# normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
-# bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }
-# italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }
-# bold_italic = { family = "JetBrainsMono Nerd Font", style = "Bold Italic" }
+normal = { family = "UbuntuMono Nerd Font", style = "Regular" }
+bold = { family = "UbuntuMono Nerd Font", style = "Bold" }
+italic = { family = "UbuntuMono Nerd Font", style = "Italic" }
+bold_italic = { family = "UbuntuMono Nerd Font", style = "Bold Italic" }
 
 # Alternative fancy fonts (uncomment your favorite):
 # normal = { family = "Fira Code Nerd Font", style = "Regular" }
@@ -67,10 +67,10 @@ multiplier = 3    # Scroll 3 lines at a time
 # normal = { family = "Iosevka Nerd Font", style = "Regular" }
 # normal = { family = "Victor Mono Nerd Font", style = "Regular" }
 
-size = 10.0  # Comfortable size
+size = 10.0 # Comfortable size
 
 # Font adjustments
-offset = { x = 0, y = 1 }      # Fine-tune positioning
+offset = { x = 0, y = 1 }       # Fine-tune positioning
 glyph_offset = { x = 0, y = 0 }
 builtin_box_drawing = true      # Better box drawing chars
 
@@ -79,55 +79,55 @@ builtin_box_drawing = true      # Better box drawing chars
 # └──────────────────────────────────────────────────────────────────┘
 [colors]
 draw_bold_text_with_bright_colors = true
-transparent_background_colors = true  # Allow transparency in colors
+transparent_background_colors = true     # Allow transparency in colors
 
 [colors.primary]
-background = "#1A1B26"  # Dark Space background
-foreground = "#9ABDF5"  # Tertiary Tint
-dim_foreground = "#6183BB"  # Dimmed text
-bright_foreground = "#FFFFFF"  # Extra bright
+background = "#1A1B26"        # Dark Space background
+foreground = "#9ABDF5"        # Tertiary Tint
+dim_foreground = "#6183BB"    # Dimmed text
+bright_foreground = "#FFFFFF" # Extra bright
 
 [colors.cursor]
-cursor = "#87A1FF"  # Primary Tint - pulsing cursor
+cursor = "#87A1FF" # Primary Tint - pulsing cursor
 text = "#1A1B26"
 
 [colors.vi_mode_cursor]
-cursor = "#B79DFF"  # Accent Tint for vi mode
+cursor = "#B79DFF" # Accent Tint for vi mode
 text = "#1A1B26"
 
 [colors.selection]
-background = "#425882"  # Tertiary Shade
+background = "#425882" # Tertiary Shade
 text = "#9ABDF5"
 
 [colors.normal]
-black = "#141418"     # Dark Space Black
-red = "#F7768E"       # Highlight
-green = "#58C8F1"     # Secondary
-yellow = "#B79DFF"    # Accent Tint
-blue = "#87A1FF"      # Primary Tint
-magenta = "#A779F3"   # Accent
-cyan = "#7BCCFC"      # Secondary Tint
-white = "#9ABDF5"     # Tertiary Tint
+black = "#141418"   # Dark Space Black
+red = "#F7768E"     # Highlight
+green = "#58C8F1"   # Secondary
+yellow = "#B79DFF"  # Accent Tint
+blue = "#87A1FF"    # Primary Tint
+magenta = "#A779F3" # Accent
+cyan = "#7BCCFC"    # Secondary Tint
+white = "#9ABDF5"   # Tertiary Tint
 
 [colors.bright]
-black = "#425882"     # Tertiary Shade
-red = "#DE4BA3"       # Highlight Shade - hot pink!
-green = "#03BDE5"     # Secondary Shade - vibrant cyan!
-yellow = "#9357E0"    # Accent Shade - purple pop!
-blue = "#6A85E4"      # Primary
-magenta = "#B79DFF"   # Accent Tint
-cyan = "#58C8F1"      # Secondary
-white = "#FFFFFF"     # Pure white for contrast
+black = "#425882"   # Tertiary Shade
+red = "#DE4BA3"     # Highlight Shade - hot pink!
+green = "#03BDE5"   # Secondary Shade - vibrant cyan!
+yellow = "#9357E0"  # Accent Shade - purple pop!
+blue = "#6A85E4"    # Primary
+magenta = "#B79DFF" # Accent Tint
+cyan = "#58C8F1"    # Secondary
+white = "#FFFFFF"   # Pure white for contrast
 
 [colors.dim]
-black = "#29355A"     # Tertiary Shade Darker
-red = "#DE4BA3"       # Highlight Shade
-green = "#03BDE5"     # Secondary Shade
-yellow = "#9357E0"    # Accent Shade
-blue = "#4A55B9"      # Primary Shade
-magenta = "#9357E0"   # Accent Shade
-cyan = "#03BDE5"      # Secondary Shade
-white = "#6183BB"     # Tertiary
+black = "#29355A"   # Tertiary Shade Darker
+red = "#DE4BA3"     # Highlight Shade
+green = "#03BDE5"   # Secondary Shade
+yellow = "#9357E0"  # Accent Shade
+blue = "#4A55B9"    # Primary Shade
+magenta = "#9357E0" # Accent Shade
+cyan = "#03BDE5"    # Secondary Shade
+white = "#6183BB"   # Tertiary
 
 # Search highlighting
 [colors.search]
@@ -162,17 +162,17 @@ background = "#29355A"
 # └──────────────────────────────────────────────────────────────────┘
 [selection]
 semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
-save_to_clipboard = true  # Auto-copy selection to clipboard
+save_to_clipboard = true                      # Auto-copy selection to clipboard
 
 # ┌──────────────────────────────────────────────────────────────────┐
 # │  HINTS - URL LAUNCHER AND MORE                                    │
 # └──────────────────────────────────────────────────────────────────┘
 [hints]
-alphabet = "jfkdls;ahgurieowpq"  # Keys for hint mode
+alphabet = "jfkdls;ahgurieowpq" # Keys for hint mode
 [[hints.enabled]]
 regex = "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
 hyperlinks = true
-command = "open"  # Use "xdg-open" on Linux, "open" on macOS
+command = "open"                                                                                                                              # Use "xdg-open" on Linux, "open" on macOS
 post_processing = true
 mouse.enabled = true
 mouse.mods = "None"
@@ -182,11 +182,10 @@ binding = { key = "U", mods = "Control|Shift" }
 # │  DEBUG & LOGGING                                                  │
 # └──────────────────────────────────────────────────────────────────┘
 [debug]
-render_timer = false  # Show render timer
-persistent_logging = false  # Keep log after quitting
-log_level = "Warn"  # Options: Off, Error, Warn, Info, Debug, Trace
-renderer = "None"  # Force renderer: None, OpenGL, GLES
-print_events = false  # Print all received events
-highlight_damage = false  # Highlight damage information
-prefer_egl = false  # Use EGL instead of GLX (Linux)
-
+render_timer = false       # Show render timer
+persistent_logging = false # Keep log after quitting
+log_level = "Warn"         # Options: Off, Error, Warn, Info, Debug, Trace
+renderer = "None"          # Force renderer: None, OpenGL, GLES
+print_events = false       # Print all received events
+highlight_damage = false   # Highlight damage information
+prefer_egl = false         # Use EGL instead of GLX (Linux)
